tests/paczka1/small_fuzzy/81535241.err
Error in line 1: ma6iX0O S176 63,8
Error in line 3: ma6iX0O A237 50,5
